--- a/profile.css
+++ b/profile.css
@@ -79,7 +79,7 @@
     border-bottom:10px;
     border-left:0;
     border-right:0;
-    border-color:darkmagenta;
+    border-color:lightgrey;
     border-style:solid;    
     
 }
@@ -90,9 +90,8 @@
     font-weight: bolder;
     list-style: none;
     text-align: left;
-    background-color: rgb(70, 2, 70);
+    background-color: lightblue;
     border-bottom: 10px;
-    border-color: rgb(70, 2, 70);
     color: black;
     padding-top: 75px;
     padding-bottom: 75px;
@@ -101,11 +100,14 @@
 
   
 .title_pos{
-    color: white;
-    background-color:rgb(70, 2, 70);
+    color: lightslategrey;
+    background-color:gainsboro;
     width: 60%;
-    padding-left:20px;
+    padding-left:30px;
+    padding-top: 20px;
+    margin-right: 100px;
     text-align: left;
+    border-radius: 20px;
 }
 .img_pos{
     width: 40%;
@@ -114,6 +116,7 @@
   
 .flex-item img{
     width:60%;
+    border-radius: 20px;
 }
 
 .top_rewards_page{
@@ -267,48 +270,73 @@ td{
 }
 
 /* spin the wheel */
-#wheel {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    border: 5px solid solid blue;
+.wrapper {
+    width: 90%;
+    max-width: 34.37em;
+    max-height: 90vh;
+    height: 580px;
     background-color: lightblue;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 1455px;
+    left: 500px;
+    padding: 3em;
+    border-radius: 1em;
+    box-shadow: 0 4em 5em rgba(27, 8, 53, 0.2);
+}
+.container {
     position: relative;
-    margin: 50px auto;
+    width: 100%;
+    height: 100%;
 }
-  
-#pointer {
-    width: 0;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-top: 100px solid white;
-    border-bottom: 100px solid transparent;
-    position: absolute;
-    top: 195px;
-    left: 195px;
+#wheel {
+    max-height: inherit;
+    width: inherit;
+    top: 0;
+    padding: 0;
 }
-
-#spin-button {
+@keyframes rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+}
+#spin-btn {
     position: absolute;
-    top: 1600px;
-    left: 350px;
-    margin: 20px auto;
-    padding: 10px 20px;
-    background-color: lightgray;
-    border: none;
-    border-radius: 5px;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    height: 26%;
+    width: 26%;
+    border-radius: 50%;
     cursor: pointer;
+    border: 0;
+    background: radial-gradient(#fdcf3b 50%, #d88a40 85%);
+    color: #c66e16;
+    text-transform: uppercase;
+    font-size: 1.8em;
+    letter-spacing: 0.1em;
+    font-weight: 600;
 }
-.result{
-    border-color: black;
-    font-weight: bolder;
-    height: 30px;
-    width: 110px;
-    text-align: center;
+.arrow_img {
     position: absolute;
-    top: 1350px;
-    left: 380px;
+    width: 4em;
+    top: 45%;
+    right: -8%;
+    mix-blend-mode: multiply;
+}
+#final-value {
+    font-size: 1.5em;
+    text-align: center;
+    color: #202020;
+    font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+    .wrapper {
+      font-size: 12px;
+    }
+    img {
+      right: -5%;
+    }
 }
 
 /* tic tac toe */
@@ -317,12 +345,12 @@ td{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 10px;
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     margin: 0 auto;
     position: absolute;
-    top: 1200px;
-    right: 400px;
+    top: 1230px;
+    right: 300px;
 }
   
 .square {
@@ -333,4 +361,3 @@ td{
     font-size: 36px;
     cursor: pointer;
 }
-  
