--- a/ZProf_rewards.css
+++ b/ZProf_rewards.css
@@ -74,7 +74,7 @@
     border-bottom:10px;
     border-left:0;
     border-right:0;
-    border-color: rgb(233, 47, 47);
+    border-color: lightblue;
     border-style:solid;    
     
 }
@@ -85,9 +85,8 @@
     font-weight: bolder;
     list-style: none;
     text-align: left;
-    background-color: rgb(233, 47, 47);
+    background-color:lightblue;
     border-bottom: 10px;
-    border-color: rgb(233, 47, 47);
     color: black;
     padding-top: 75px;
     padding-bottom: 75px;
@@ -96,21 +95,22 @@
 
   
 .pointinfo_pos{
-    color: white;
-    background-color: rgb(233, 47, 47);;
-    width: 50%;
+    color: black;
+    background-color: #acb6e5;
+    width: 60%;
     padding-left:110px;
     text-align: left;
 }
 .points_pos{
     padding-top: 10px;
     padding-left: 50px;
+    padding-right: 50px;
     justify-content: center;
     font-size: 35px;
-    color: aqua;
+    color: black;
 }
 .info_pos{
-    color: white;
+    color: black;
     font-size: 40px;
     width: 30%;
     text-align: center;
@@ -123,7 +123,7 @@
 
 
 .rewardsweb_page{
-    background: purple;
+    background: lightskyblue;
     display: flex;
     flex-direction: column;
     height: 650px;
@@ -181,7 +181,6 @@
     margin: auto;
     width: 400px;
     margin-top: 50px;
-    border-radius: 20px;
 }
 
 
