--- a/profile.css
+++ b/profile.css
@@ -209,7 +209,7 @@ td{
 
 
 .rewardsweb_page{
-    background: purple;
+    background: rgb(35, 171, 196);
     display: flex;
     flex-direction: column;
     height: 650px;
